--- a/app/AndroidManifest.xml
+++ b/app/AndroidManifest.xml
@@ -49,7 +49,8 @@
         </activity>
         <activity
             android:name="com.example.shareburst.GroupsActivity"
-            android:label="@string/title_activity_groups" >
+            android:label="@string/title_activity_groups"
+            android:parentActivityName="com.example.shareburst.GroupsActivity" >
         </activity>
     </application>
 
