Add actions to action bar in group view

--- a/app/AndroidManifest.xml
+++ b/app/AndroidManifest.xml
@@ -49,8 +49,7 @@
         </activity>
         <activity
             android:name="com.example.shareburst.GroupsActivity"
-            android:label="@string/title_activity_groups"
-            android:parentActivityName="com.example.shareburst.GroupsActivity" >
+            android:label="@string/title_activity_groups" >
         </activity>
     </application>
 
