Added search to users list

--- a/app/AndroidManifest.xml
+++ b/app/AndroidManifest.xml
@@ -59,6 +59,7 @@
         <activity
             android:name="com.example.shareburst.UsersActivity"
             android:label="@string/title_activity_users"
+            android:windowSoftInputMode="stateHidden"
             android:parentActivityName="com.example.shareburst.NewGroupActivity" >
         </activity>
         <activity
